# TransitOps-Smart-Transport-Operations-Platform

./: .env.example  Makefile
backend/: mcp_server.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/api/v1/: __init__.py  ai_advisor.py  dashboard.py  drivers.py  expenses.py  maintenance.py  trips.py  vehicles.py
backend/app/core/: __init__.py  config.py  pagination.py  security.py
backend/app/db/: base.py  registry.py  schema.sql  seed.py  session.py
backend/app/models/: __init__.py  audit.py  chat.py  enums.py  fuel_log.py  maintenance.py  vehicle.py
backend/app/schemas/: ai.py  driver.py  report.py  vehicle.py
backend/app/services/: driver_service.py  expense_service.py  fuel_service.py
backend/app/services/ai/: advisor.py  client.py  context.py  defaults.py  insights.py  settings.py  tools.py
backend/app/tests/: conftest.py  factories.py  test_advisor.py  test_ai_insights.py  test_auth_rbac.py  test_dashboard.py  test_e2e_workflow.py  test_fuel_expenses.py  test_reports.py  test_schema_constraints.py  test_security.py
docs/: 00-PROJECT-BRIEF.md  01-ARCHITECTURE.md  05-FRONTEND-SPEC.md  06-AI-FEATURES.md  07-TESTING.md  08-DEVOPS-GIT.md  09-DEMO-SCRIPT.md  10-AI-KNOWLEDGE-BASE.md
frontend/: package.json
frontend/src/auth/: ProtectedRoute.tsx  RequireRole.tsx
frontend/src/components/: ThemeToggle.tsx
frontend/src/components/ui/: Button.tsx  DateInput.tsx  RoleBadge.tsx
frontend/src/features/drivers/: DriversPage.tsx
frontend/src/features/finance/: AddFuelModal.tsx  FuelExpensesPage.tsx
frontend/src/features/maintenance/: CloseMaintenanceModal.tsx  MaintenancePage.tsx
frontend/src/features/settings/: SettingsPage.tsx
frontend/src/features/trips/: CompleteTripModal.tsx  (+1 more)
frontend/src/types/: api.ts
tasks/: TASKS-1-AFIF-DATABASE.md  TASKS-2-ISMAIL-BACKEND.md
transitops/: .gitignore  CLAUDE.md  KICKOFF-PROMPTS.md  Makefile  README.md  docker-compose.yml
transitops/backend/: pyproject.toml
transitops/backend/alembic/: env.py
transitops/backend/alembic/versions/: 0002_ai_settings_api_key.py
transitops/backend/app/: __init__.py  main.py
transitops/backend/app/api/v1/: __init__.py  ai.py  auth.py  fuel_logs.py  insights.py  reports.py  users.py
transitops/backend/app/core/: config.py  deps.py  errors.py  security.py
transitops/backend/app/db/: __init__.py  base.py  base_class.py  queries.py  registry.py  seed.py  session.py
transitops/backend/app/models/: ai_settings.py  audit.py  chat.py  driver.py  enums.py  expense.py  fuel_log.py  maintenance.py  trip.py  user.py  vehicle.py
transitops/backend/app/schemas/: ai.py  auth.py  common.py  dashboard.py  expense.py  fuel.py  maintenance.py  trip.py  user.py
transitops/backend/app/services/: audit.py  maintenance_service.py  report_service.py  trip_service.py  user_service.py  vehicle_service.py
transitops/backend/app/services/ai/: advisor.py  chat.py  client.py  knowledge.py  settings.py
transitops/backend/app/tests/: conftest.py  factories.py  test_ai_chat.py  test_ai_settings.py  test_auth_rbac.py  test_business_rules.py  test_drivers.py  test_maintenance.py  test_vehicles.py
transitops/docs/: 02-DATABASE.md  03-API-SPEC.md  04-BUSINESS-RULES.md  05-FRONTEND-SPEC.md
transitops/frontend/: README.md  package-lock.json  tailwind.config.js
transitops/frontend/src/: App.tsx  index.css
transitops/tasks/: TASKS-1-AFIF-DATABASE.md  TASKS-2-ISMAIL-BACKEND.md  TASKS-3-PIYUSH-FRONTEND.md  TASKS-OVERVIEW.md
(+36 files in other folders)
