[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transitops-backend"
version = "0.1.0"
description = "TransitOps backend — FastAPI + SQLAlchemy 2.0 + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "psycopg2-binary",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "email-validator",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "httpx",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "freezegun"]
mcp = ["fastmcp"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["app/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
