[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transitops-backend"
version = "0.1.0"
description = "TransitOps backend — FastAPI + SQLAlchemy 2.0 + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "psycopg2-binary",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "email-validator",
    "passlib[bcrypt]",
    "bcrypt>=4.1,<5.0",  # passlib 1.7.4 breaks on bcrypt 5.x (>72-byte behavior change)
    "python-jose[cryptography]",
    "httpx",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "freezegun"]
mcp = ["fastmcp"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "UP037",  # quoted forward-refs are required for SQLAlchemy Mapped[...] relationships
    "UP042",  # keep `str, Enum` per docs/02 §2 (not StrEnum)
]

[tool.ruff.lint.per-file-ignores]
# Wide data literals read better as tables than wrapped.
"app/db/seed.py" = ["E501"]
"app/tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
